--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,151 +6,185 @@
     android:layout_height="match_parent"
     tools:context=".fragment.HomeFragment">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
+
 
         <LinearLayout
-            android:id="@+id/search"
-            android:background="@color/colorPrimary"
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize">
-
-           <LinearLayout
-               android:background="@color/bgwhite"
-               android:layout_margin="10dp"
-               android:layout_width="match_parent"
-               android:layout_height="match_parent">
-
-               <ImageView
-                   android:layout_marginStart="10dp"
-                   android:layout_gravity="center_vertical"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:src="@drawable/search"/>
-               <TextView
-                   android:layout_gravity="center_vertical"
-                   android:layout_marginStart="10dp"
-                   android:text="Cari buku ..."
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"/>
-           </LinearLayout>
-        </LinearLayout>
-
-
-    <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/bgwhite">
+            android:orientation="vertical">
 
-            <com.denzcoskun.imageslider.ImageSlider
-                android:id="@+id/slider"
+            <LinearLayout
+                android:id="@+id/search"
                 android:layout_width="match_parent"
-                android:layout_height="180dp"
-                app:auto_cycle="true"
-                app:error_image="@android:color/white"
-                app:period="3000"
-                app:placeholder="@android:color/white">
+                android:layout_height="?actionBarSize"
+                android:background="@color/colorPrimary">
 
-            </com.denzcoskun.imageslider.ImageSlider>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+                    android:background="@color/bgwhite">
 
-        </RelativeLayout>
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="10dp"
+                        android:src="@drawable/search" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginTop="5dp"
-            android:background="@color/bgwhite">
-
-            <GridLayout
-                android:id="@+id/grid1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true">
-
-                <ImageView
-                    android:layout_margin="20dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/emot"
-                    android:text="button 1.1" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="10dp"
+                        android:text="Cari buku ..." />
+                </LinearLayout>
+            </LinearLayout>
 
 
-                <ImageView
-                    android:layout_margin="20dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/emot"
-                    android:text="button 1.2" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <ImageView
-                    android:layout_margin="20dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/emot"
-                    android:text="button 1.3" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/bgwhite">
 
-                <ImageView
-                    android:layout_margin="20dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/emot"
-                    android:layout_row="1"
-                    android:layout_column="0"
-                    android:text="button 2.1" />
+                    <com.denzcoskun.imageslider.ImageSlider
+                        android:id="@+id/slider"
+                        android:layout_width="match_parent"
+                        android:layout_height="180dp"
+                        app:auto_cycle="true"
+                        app:error_image="@android:color/white"
+                        app:period="3000"
+                        app:placeholder="@android:color/white">
 
-                <ImageView
-                    android:layout_margin="20dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/emot"
-                    android:text="button 2.2" />
+                    </com.denzcoskun.imageslider.ImageSlider>
 
-                <ImageView
-                    android:layout_margin="20dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/emot"
-                    android:text="button 2.3" />
-            </GridLayout>
+                </RelativeLayout>
 
-        </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_marginTop="5dp"
+                    android:background="@color/bgwhite">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingVertical="10dp"
-            android:layout_marginTop="5dp"
-            android:background="@color/bgwhite">
+                    <GridLayout
+                        android:id="@+id/grid1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true">
 
-            <TextView
-                android:layout_marginHorizontal="20dp"
-                android:textSize="15dp"
-                android:textStyle="bold"
-                android:id="@+id/tv_terbaru"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="Terbaru"/>
-            <TextView
-                android:layout_alignParentEnd="true"
-                android:layout_marginHorizontal="20dp"
-                android:textSize="12dp"
-                android:textStyle="italic"
-                android:id="@+id/tv_lihat_semua"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="Lihat semua"/>
+                        <ImageView
+                            android:layout_gravity="center"
+                            android:layout_margin="20dp"
+                            android:src="@drawable/emot"
+                            android:text="button 1.1" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:layout_marginTop="10dp"
-                android:layout_below="@+id/tv_terbaru"
-                android:layout_width="wrap_content"
-                android:id="@+id/rv_home"
-                android:layout_height="wrap_content"/>
 
-        </RelativeLayout>
-    </LinearLayout>
-    </LinearLayout>
+                        <ImageView
+                            android:layout_gravity="center"
+                            android:layout_margin="20dp"
+                            android:src="@drawable/emot"
+                            android:text="button 1.2" />
+
+                        <ImageView
+                            android:layout_gravity="center"
+                            android:layout_margin="20dp"
+                            android:src="@drawable/emot"
+                            android:text="button 1.3" />
+
+                        <ImageView
+                            android:layout_row="1"
+                            android:layout_column="0"
+                            android:layout_gravity="center"
+                            android:layout_margin="20dp"
+                            android:src="@drawable/emot"
+                            android:text="button 2.1" />
+
+                        <ImageView
+                            android:layout_gravity="center"
+                            android:layout_margin="20dp"
+                            android:src="@drawable/emot"
+                            android:text="button 2.2" />
+
+                        <ImageView
+                            android:layout_gravity="center"
+                            android:layout_margin="20dp"
+                            android:src="@drawable/emot"
+                            android:text="button 2.3" />
+                    </GridLayout>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:background="@color/bgwhite"
+                    android:paddingVertical="10dp">
+
+                    <TextView
+                        android:id="@+id/tv_terbaru"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="20dp"
+                        android:text="Terbaru"
+                        android:textSize="15dp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tv_lihat_semua"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginHorizontal="20dp"
+                        android:text="Lihat semua"
+                        android:textSize="12dp"
+                        android:textStyle="italic" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_home"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tv_terbaru"
+                        android:layout_marginTop="10dp" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="50dp"
+                    android:background="@color/bgwhite"
+                    android:paddingVertical="10dp">
+
+                    <TextView
+
+                        android:id="@+id/tvtv"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="20dp"
+                        android:text="About Bookku"
+                        android:textSize="15dp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tvtv"
+                        android:layout_margin="20dp"
+                        android:text="@string/info" />
+
+                </RelativeLayout>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
 </FrameLayout>
